--- a/ASPCoreWithAngular/ClientApp/src/app/app.component.html
+++ b/ASPCoreWithAngular/ClientApp/src/app/app.component.html
@@ -6,5 +6,6 @@
   <mat-drawer-content>
     <app-header (toggleSidebarForMe)="sideBarToggler()"></app-header>
     <router-outlet></router-outlet>
+    <app-footer fxFlexOffset="auto"></app-footer>
   </mat-drawer-content>
 </mat-drawer-container>
