--- a/ASPCoreWithAngular/ClientApp/src/app/home/home.component.html
+++ b/ASPCoreWithAngular/ClientApp/src/app/home/home.component.html
@@ -4,31 +4,25 @@
         <div class="card">
             <h4 class="card-header">Login</h4>
             <div class="card-body">
-                <form [formGroup]="loginForm">
+                <form>
                     <div class="form-group col-md-6">
                         <label for="username">Username</label>
-                        <input type="text" formControlName="username" class="form-control"
-                            [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                            <div *ngIf="f.username.errors.required">Username is required</div>
-                        </div>
+                        <input type="text" id="userName" class="form-control" />
+
                     </div>
                     <div class="form-group col-md-6">
                         <label for="password">Password</label>
-                        <input type="password" formControlName="password" class="form-control"
-                            [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                            <div *ngIf="f.password.errors.required">Password is required</div>
-                        </div>
+                        <input type="password" id="Password" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <button [disabled]="loading" class="btn btn-primary">
+                        <button [disabled]="loading" class="btn btn-primary" type="submit" (click)="check()">
                             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                             Login
                         </button>&nbsp;&nbsp;
                         <button class="btn btn-danger" (click)="cancel()">Register</button>
                     </div>
                 </form>
+                <span>{{ msg }}</span>
             </div>
         </div>
     </div>
