modification in the dashboard

--- a/ASPCoreWithAngular/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/ASPCoreWithAngular/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,43 @@
 <div class="container-fluid page">
     <div class="d-flex page__box p-3 mt-2">Dashboard</div>
     <div class="page__content shadow p-3 position-relative">
-        <app-fetch-employee></app-fetch-employee>
+        <!-- <app-fetch-employee></app-fetch-employee> -->
+        <div class="row">
+            <div class="card col-md-4">
+                <div class="card-header">Featured</div>
+                <div class="card-body">
+                    <h5 class="card-title">Employee details</h5>
+                    <p class="card-text">
+                        Add<br>
+                        Update<br>
+                        Delete
+                    </p>
+                    <a href="#" class="btn btn-primary" routerLink="/fetch-employee">Button</a>
+                </div>
+                <div class="card-footer text-muted">2 days ago</div>
+            </div>
+            <div class="card col-md-4">
+                <div class="card-header">Featured</div>
+                <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">
+                        With supporting text below as a natural lead-in to additional content.
+                    </p>
+                    <a href="#" class="btn btn-primary">Button</a>
+                </div>
+                <div class="card-footer text-muted">2 days ago</div>
+            </div>
+            <div class="card col-md-4">
+                <div class="card-header">Featured</div>
+                <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">
+                        With supporting text below as a natural lead-in to additional content.
+                    </p>
+                    <a href="#" class="btn btn-primary">Button</a>
+                </div>
+                <div class="card-footer text-muted">2 days ago</div>
+            </div>
+        </div>
     </div>
 </div>
