--- a/ASPCoreWithAngular/ClientApp/src/app/fetch-employee/fetch-employee.component.html
+++ b/ASPCoreWithAngular/ClientApp/src/app/fetch-employee/fetch-employee.component.html
@@ -1,29 +1,36 @@
-<p *ngIf="!empList"><em>Loading...</em></p>
-<p>
-    <a [routerLink]="['/register-employee']">New</a>
-</p>
-<table class='table table-striped' *ngIf="empList">
-    <thead>
-        <tr>
-            <!-- <th>EmployeeId</th> -->
-            <th>Name</th>
-            <th>Gender</th>
-            <th>Department</th>
-            <!-- <th>City</th> -->
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let emp of empList">
-            <!-- <td>{{ emp.employeeId }}</td> -->
-            <td>{{ emp.name }}</td>
-            <td>{{ emp.gender }}</td>
-            <td>{{ emp.department }}</td>
-            <!-- <td>{{ emp.city }}</td> -->
-            <td>
-            <td>
-                <a [routerLink]="['/employee/edit/', emp.employeeId]">Edit</a> |
-                <a [routerLink]="" (click)="delete(emp.employeeId)">Delete</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div class="container-fluid page">
+    <div class="d-flex page__box p-3 mt-2">Dashboard</div>
+    <div class="page__content shadow p-3 position-relative">
+        <p *ngIf="!empList"><em>Loading...</em></p>
+        <p>
+            <a [routerLink]="['/register-employee']">
+                <mat-icon>add_box</mat-icon>
+            </a>
+        </p>
+        <table class='table table-striped' *ngIf="empList">
+            <thead>
+                <tr>
+                    <!-- <th>EmployeeId</th> -->
+                    <th>Name</th>
+                    <th>Gender</th>
+                    <th>Department</th>
+                    <!-- <th>City</th> -->
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let emp of empList">
+                    <!-- <td>{{ emp.employeeId }}</td> -->
+                    <td>{{ emp.name }}</td>
+                    <td>{{ emp.gender }}</td>
+                    <td>{{ emp.department }}</td>
+                    <!-- <td>{{ emp.city }}</td> -->
+                    <td>
+                    <td>
+                        <a [routerLink]="['/employee/edit/', emp.employeeId]">Edit</a> |
+                        <a [routerLink]="" (click)="delete(emp.employeeId)">Delete</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
