--- a/ASPCoreWithAngular/ClientApp/src/app/header/header.component.scss
+++ b/ASPCoreWithAngular/ClientApp/src/app/header/header.component.scss
@@ -34,5 +34,18 @@ mat-toolbar {
     .mat-menu-content {
       width: 160px;
     }
+    .mat-drawer-container {
+      background-color: gainsboro;
+      color: rgba(0,0,0,.87);
   }
+
+  .mat-drawer-inner-container {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #212529 !important;
+    -webkit-overflow-scrolling: touch;
+}
+
+}
   
