--- a/ASPCoreWithAngular/ClientApp/src/app/dashboard/dashboard.component.scss
+++ b/ASPCoreWithAngular/ClientApp/src/app/dashboard/dashboard.component.scss
@@ -1,1 +1,12 @@
 @import "../home/home.component.scss";
+
+
+@mixin md-icon-size($size: 24px) {
+    font-size: $size;
+    height: $size;
+    width: $size;
+  }
+  
+  .mat-icon {
+    @include md-icon-size(35px);
+  }
