--- a/ASPCoreWithAngular/ClientApp/src/app/header/header.component.html
+++ b/ASPCoreWithAngular/ClientApp/src/app/header/header.component.html
@@ -8,12 +8,11 @@
                 <li>
                     <button mat-button [matMenuTriggerFor]="menu" class="user mt-2 d-flex align-items-center">
                         <img src="./assets/praveen.jpg" alt="" class="user-image mr-1 p-2" />
-
                         User Name
                         <mat-icon class="user-image-icon ml-1">keyboard_arrow_down</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu">
-                        <button mat-menu-item>
+                        <button mat-menu-item [routerLink]="['/home']">
                             <mat-icon>exit_to_app</mat-icon>
                             Logout
                         </button>
