--- a/ASPCoreWithAngular/ClientApp/src/app/Categories/category-details/category-details.component.scss
+++ b/ASPCoreWithAngular/ClientApp/src/app/Categories/category-details/category-details.component.scss
@@ -1,5 +1,4 @@
-@import "../home/home.component.scss";
-
+@import "../../home/home.component.scss";
 
 @mixin md-icon-size($size: 24px) {
     font-size: $size;
