--- a/ASPCoreWithAngular/ClientApp/src/app/Categories/category-add/category-add.component.html
+++ b/ASPCoreWithAngular/ClientApp/src/app/Categories/category-add/category-add.component.html
@@ -11,18 +11,18 @@
             <div class="form-group row">
                 <label class=" control-label col-md-12">Category Code</label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" formControlName="CategoryCode">
+                    <input class="form-control" type="text" formControlName="categoryCode">
                 </div>
-                <span class="text-danger" *ngIf="CategoryCode?.invalid && formDir.submitted">
+                <span class="text-danger" *ngIf="categoryCode?.invalid && formDir.submitted">
                     Category Code is required.
                 </span>
             </div>
             <div class="form-group row">
                 <label class=" control-label col-md-12">Category Name</label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" formControlName="CategoryName">
+                    <input class="form-control" type="text" formControlName="categoryName">
                 </div>
-                <span class="text-danger" *ngIf="CategoryName?.invalid && formDir.submitted">
+                <span class="text-danger" *ngIf="categoryName?.invalid && formDir.submitted">
                     Category Name is required.
                 </span>
             </div>
