--- a/ASPCoreWithAngular/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/ASPCoreWithAngular/ClientApp/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
     <div class="page__content shadow p-3 position-relative">
         <!-- <app-fetch-employee></app-fetch-employee> -->
         <div class="row">
-            <div class="card col-md-4">
+            <div class="card col-md-3">
                 <div class="card-header">Featured</div>
                 <div class="card-body">
                     <h5 class="card-title">Employee details</h5>
@@ -23,7 +23,7 @@
                 </div>
                 <div class="card-footer text-muted">2 days ago</div>
             </div>
-            <div class="card col-md-4">
+            <div class="card col-md-3">
                 <div class="card-header">Featured</div>
                 <div class="card-body">
                     <h5 class="card-title">Item Details</h5>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="card-footer text-muted">2 days ago</div>
             </div>
-            <div class="card col-md-4">
+            <div class="card col-md-3">
                 <div class="card-header">Featured</div>
                 <div class="card-body">
                     <h5 class="card-title">Categories Details</h5>
@@ -49,7 +49,21 @@
                 </div>
                 <div class="card-footer text-muted">2 days ago</div>
             </div>
+            <div class="card col-md-3">
+                <div class="card-header">Featured</div>
+                <div class="card-body">
+                    <h5 class="card-title">Recipe Details</h5>
+                    <p class="card-text">
+                        Add<br>
+                        Update<br>
+                        Delete
+                    </p>
+                    <a href="#" class="btn btn-primary" routerLink="/RecipeDetails">Button</a>
+                </div>
+                <div class="card-footer text-muted">2 days ago</div>
+            </div>
         </div>
+        <br>
         <div class="row">
             <div class="card col-md-4">
                 <div class="chart-wrapper">
