implemeted recipe add and details.

--- a/ASPCoreWithAngular/ClientApp/src/app/Recipe/recipe-add/recipe-add.component.html
+++ b/ASPCoreWithAngular/ClientApp/src/app/Recipe/recipe-add/recipe-add.component.html
@@ -11,45 +11,45 @@
             <div class="form-group row">
                 <label class=" control-label col-md-12">RecipeCategoryCode</label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" formControlName="RecipeCategoryCode">
+                    <input class="form-control" type="text" formControlName="recipeCategoryCode">
                 </div>
-                <span class="text-danger" *ngIf="RecipeCategoryCode?.invalid && formDir.submitted">
+                <span class="text-danger" *ngIf="recipeCategoryCode?.invalid && formDir.submitted">
                     RecipeCategoryCode is required.
                 </span>
             </div>
             <div class="form-group row">
                 <label class=" control-label col-md-12">RecipeCategoryName</label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" formControlName="RecipeCategoryName">
+                    <input class="form-control" type="text" formControlName="recipeCategoryName">
                 </div>
-                <span class="text-danger" *ngIf="RecipeCategoryName?.invalid && formDir.submitted">
+                <span class="text-danger" *ngIf="recipeCategoryName?.invalid && formDir.submitted">
                     RecipeCategoryName is required.
                 </span>
             </div>
             <div class="form-group row">
                 <label class=" control-label col-md-12">RecipeCode</label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" formControlName="RecipeCode">
+                    <input class="form-control" type="text" formControlName="recipeCode">
                 </div>
-                <span class="text-danger" *ngIf="RecipeCode?.invalid && formDir.submitted">
+                <span class="text-danger" *ngIf="recipeCode?.invalid && formDir.submitted">
                     RecipeCode is required.
                 </span>
             </div>
             <div class="form-group row">
                 <label class=" control-label col-md-12">RecipeName</label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" formControlName="RecipeName">
+                    <input class="form-control" type="text" formControlName="recipeName">
                 </div>
-                <span class="text-danger" *ngIf="RecipeName?.invalid && formDir.submitted">
+                <span class="text-danger" *ngIf="recipeName?.invalid && formDir.submitted">
                     RecipeName is required.
                 </span>
             </div>
             <div class="form-group row">
                 <label class=" control-label col-md-12">RecipeImage</label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" formControlName="RecipeImage">
+                    <input class="form-control" type="text" formControlName="recipeImage">
                 </div>
-                <span class="text-danger" *ngIf="RecipeImage?.invalid && formDir.submitted">
+                <span class="text-danger" *ngIf="recipeImage?.invalid && formDir.submitted">
                     RecipeImage is required.
                 </span>
             </div>
