updated angular 12 to 15

--- a/ASPCoreWithAngular/ClientApp/src/app/Item/item-details/item-details.component.html
+++ b/ASPCoreWithAngular/ClientApp/src/app/Item/item-details/item-details.component.html
@@ -30,7 +30,7 @@
                     <td>{{ item.status }}</td>
                     <td>
                         <a [routerLink]="['/item/edit/', item.itemId]">Edit</a> |
-                        <a [routerLink]="" (click)="delete(item.itemId)">Delete</a>
+                        <a [routerLink]="[]" (click)="delete(item.itemId)">Delete</a>
                     </td>
                 </tr>
             </tbody>
