--- a/ASPCoreWithAngular/ClientApp/src/app/fetch-employee/fetch-employee.component.html
+++ b/ASPCoreWithAngular/ClientApp/src/app/fetch-employee/fetch-employee.component.html
@@ -29,7 +29,7 @@
                     <td>{{ emp.department }}</td>
                     <td>
                         <a [routerLink]="['/employee/edit/', emp.employeeId]">Edit</a> |
-                        <a [routerLink]="" (click)="delete(emp.employeeId)">Delete</a>
+                        <a [routerLink]="[]" (click)="delete(emp.employeeId)">Delete</a>
                     </td>
                 </tr>
             </tbody>
