--- a/ASPCoreWithAngular/ClientApp/src/app/Categories/category-details/category-details.component.html
+++ b/ASPCoreWithAngular/ClientApp/src/app/Categories/category-details/category-details.component.html
@@ -28,7 +28,7 @@
                     <td>{{ cat.categoryName }}</td>
                     <td>
                         <a [routerLink]="['/category/edit/', cat.categoryId]">Edit</a> |
-                        <a [routerLink]="" (click)="delete(cat.categoryId)">Delete</a>
+                        <a [routerLink]="[]" (click)="delete(cat.categoryId)">Delete</a>
                     </td>
                 </tr>
             </tbody>
